--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: osemosys
+name: life_academy
 channels:
   - conda-forge
 dependencies:
@@ -13,5 +13,5 @@ dependencies:
   - matplotlib
   - tqdm
   - pip:
-    - otoole==0.10.0b0
+    - git+https://github.com/OSeMOSYS/otoole.git@develop#egg=otoole
 
